# business-club-management

./: .env  .git-credentials  .gitignore  Pasted--Metal-Business-Club-Members-Portal-Specification-Overview-The-Metal-Business-Club-Members-Po-1731143365172.txt  Pasted-2024-11-09-09-01-04-419Z-Host-information-2024-11-09-09-01-04-419Z-2024-11-09-0-1731143095680.txt  Pasted-2024-11-09-09-07-17-198Z-Host-information-2024-11-09-09-07-17-198Z-2024-11-09-0-1731143404339.txt  Pasted-2024-11-10-13-35-42-736Z-Host-information-2024-11-10-13-35-42-736Z-2024-11-10-1-1731245892529.txt  Pasted-Uitgebreide-Prompt-voor-Claude-Ik-wil-een-complete-applicatie-laten-ontwikkelen-voor-het-budgetteren-1731072143746.txt  README.md  git_push.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: codespaces-deploy.yml
.streamlit/: config.toml
models/: financial.py  member.py
pages/: 01_member_management.py  02_financial_planning.py  03_reports_and_kpis.py  04_Scenario_Planning.py  04_scenario_planning.py  05_data_management.py
utils/: calculations.py  config.py  database.py  ml_forecasting.py
