[project]
name = "repl-nix-budgetwiseapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn",
    "sqlalchemy>=1.5.2",
    "streamlit>=1.40.0",
]
